package net.dskim.desingpattern.command;

@FunctionalInterface
public interface TextFileOperation {
	String execute();
}
