@startuml Command Method 패턴(김동석)

hide empty members
hide empty methods

title Command 패턴(김동석)
header https://github.com/bluedskim/javaDesignPatterns
footer 작성시각 %date("yyyy.MM.dd' 'HH:mm")

class TextFile {
	String open()
	String save()
}

interface TextFileOperation {
	String execute()
}

class OpenTextFileOperation {
	public OpenTextFileOperation(TextFile textFile)
	String execute()
}

class SaveTextFileOperation {
	public SaveTextFileOperation(TextFile textFile)
	String execute()
}

class TextFileOperationExecutorWithCommand {
	String executeOperation(TextFileOperation textFileOperation)
}

TextFileOperation <|.. OpenTextFileOperation
TextFileOperation <|.. SaveTextFileOperation

OpenTextFileOperation --> TextFile
SaveTextFileOperation --> TextFile

TextFileOperationExecutorWithCommand --> TextFileOperation

@enduml